--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="row">
           <div class="col-md-6">
             <p class="mb-0">
-              <span class="mr-3"><strong>Phone:</strong> <a href="tel://#">+256 XXX XXX XXX</a></span>
+              <span class="mr-3"><strong>Phone:</strong> <a href="tel://#">+256 776 755 111</a></span>
               <span><strong>Email:</strong> <a href="#">info@kulburn.com</a></span>
             </p>
           </div>
@@ -62,7 +62,7 @@
         <div class="row align-items-center">
           
           <div class="col-11 col-xl-2">
-            <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">KULBRN</a></h1>
+            <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">KULBURN</a></h1>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
@@ -123,7 +123,6 @@
               <ul>
                 <li>Honesty</li>
                 <li>Integrity</li>
-                <li></li>
                 <li>Timely Delivery</li>
               </ul>
             </div>
