Services page completed

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                 <li class="has-children">
                   <a href="services.html">Services</a>
                   <ul class="dropdown">
-                    <li><a href="#">Tax Consultancy</a></li>
-                    <li><a href="#">Proporsal Writing</a></li>
-                    <li><a href="#">Travel Advisory</a></li>
+                    <li><a href="services.html">Tax Consultancy</a></li>
+                    <li><a href="services.html">Proporsal Writing</a></li>
+                    <li><a href="services.html">Travel Advisory</a></li>
                   </ul>
                 </li>
                 <li><a href="contact.html">Contact</a></li>
@@ -164,7 +164,8 @@
               </blockquote>
 
               <figure class="mb-4 d-flex align-items-center justify-content-center">
-                <div><img src="images/person_3.jpg" alt="Image" class="w-50 img-fluid mb-3"></div>
+                <!-- <div> <img src="images/person_3.jpg" alt="Image" class="w-50 img-fluid mb-3"> </div> -->
+                <div class="unit-4-icon mr-4" style="font-size: 60px"><span class="text-primary icon-person"></span></div>
                 <p>John Mbonye</p>
               </figure>
             </div>
