Completion fo site

--- a/services.html
+++ b/services.html
@@ -121,7 +121,7 @@
               <div>
                 <h3>Proporsal Writing</h3>
                 <p>Providing much needed services so as to enable you come up with an effective proporasl for your air travel business needs</p>
-                <p><a href="#">Learn More</a></p>
+                <p><a href="contact.html">Learn More</a></p>
               </div>
             </div>
           </div>
@@ -131,7 +131,7 @@
               <div>
                 <h3>Transportation</h3>
                 <p>To provide transport facilities for the carriage of passangers and goods and to organize, maintain and operate for hire transportation services in Uganda and some parts of East Africa</p>
-                <p><a href="#">Learn More</a></p>
+                <p><a href="contact.html">Learn More</a></p>
               </div>
             </div>
           </div>
@@ -141,7 +141,7 @@
               <div>
                 <h3>Travel Documents</h3>
                 <p>Assist in attaining passports, visas, completion fo travel documents, issuing of tickets, booking of passangers, accomodation, etc</p>
-                <p><a href="#">Learn More</a></p>
+                <p><a href="contact.html">Learn More</a></p>
               </div>
             </div>
           </div>
@@ -151,7 +151,7 @@
               <div>
                 <h3>Tax Consultancy</h3>
                 <p>Provide consultancy services and advice in taxation, training in aircraft, cargo and passenger handling and related services</p>
-                <p><a href="#">Learn More</a></p>
+                <p><a href="contact.html">Learn More</a></p>
               </div>
             </div>
           </div>
@@ -163,7 +163,7 @@
               <div>
                 <h3>Freight and Courier</h3>
                 <p>Carry out domestic and international freight forwarding and courier services, customs agents, cargo agents,clearing and forwarding, tour organization and promotion, etc </p>
-                <p><a href="#">Learn More</a></p>
+                <p><a href="contact.html">Learn More</a></p>
               </div>
             </div>
           </div>
@@ -173,7 +173,7 @@
               <div>
                 <h3>Travel</h3>
                 <p>Providing the best transport solutions for you, air, road water, while in UGanda or East Africa</p>
-                <p><a href="#">Learn More</a></p>
+                <p><a href="contact.html">Learn More</a></p>
               </div>
             </div>
           </div>
@@ -189,12 +189,12 @@
                 <h2 class="footer-heading mb-4">About Us</h2>Kulburn Traevls Limited is a Ugandan based company aimed at providing the best consultancy services in the Aviation industry. </p>
               </div>
               <div class="col-md-3 ml-auto">
-                <h2 class="footer-heading mb-4">Features</h2>
+                <h2 class="footer-heading mb-4">Services</h2>
                 <ul class="list-unstyled">
-                  <li><a href="#">Tax Consultancy</a></li>
-                  <li><a href="#">Travel Advisory</a></li>
-                  <li><a href="#">Proporsal Writing</a></li>
-                  <li><a href="#">Contact Us</a></li>
+                  <li><a href="services.html">Tax Consultancy</a></li>
+                  <li><a href="services.html">Travel Advisory</a></li>
+                  <li><a href="services.html">Proporsal Writing</a></li>
+                  <li><a href="contact.html">Contact Us</a></li>
                 </ul>
               </div>
               <div class="col-md-3">
