--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@
                 <h2 class="footer-heading mb-4">About Us</h2>Kulburn Traevls Limited is a Ugandan based company aimed at providing the best consultancy services in the Aviation industry. </p>
               </div>
               <div class="col-md-3 ml-auto">
-                <h2 class="footer-heading mb-4">Features</h2>
+                <h2 class="footer-heading mb-4">Services</h2>
                 <ul class="list-unstyled">
-                  <li><a href="#">Tax Consultancy</a></li>
-                  <li><a href="#">Travel Advisory</a></li>
-                  <li><a href="#">Proporsal Writing</a></li>
-                  <li><a href="#">Contact Us</a></li>
+                  <li><a href="services.html">Tax Consultancy</a></li>
+                  <li><a href="services.html">Travel Advisory</a></li>
+                  <li><a href="services.html">Proporsal Writing</a></li>
+                  <li><a href="contact.html">Contact Us</a></li>
                 </ul>
               </div>
               <div class="col-md-3">
